--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,23 @@
 .container {
-  padding: 0 2rem;
+  margin: 0 auto;
+  max-width: 1350px;
+  padding: 1rem;
+
+  h2 {
+    margin: 2rem 0;
+    text-align: center;
+  }
 }
 
+.types_selectors {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 2rem;
+}
 
+mat-button-toggle-group{
+  margin: 0 auto;
+}
 
 
 
